# ephemeris

./: .gitignore  Cargo.toml  Dockerfile  README.md
data/: chains.json
src/: chain.rs  config.rs  docker.rs  main.rs  rpc.rs
templates/: cosmos_app.toml  tendermint_config.toml  wasmd_app.toml
