[package]
name = "ephemeris"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.11.1"
anyhow = { version = "1.0" }
reqwest = { version = "0.11.14", features = ["blocking"] }
clap = { version = "4.1.6", features = ["derive"] }
serde = "1.0.152"
serde_json = { version = "1.0.93", features = ["preserve_order"] }
json-patch = "0.3.0"